--- a/resourceFile.qrc
+++ b/resourceFile.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/images">
         <file>wilkizajac.jpg</file>
         <file>room.jpg</file>
+        <file>treasureIsland.jpg</file>
     </qresource>
 </RCC>
