--- a/resourceFile.qrc
+++ b/resourceFile.qrc
@@ -3,5 +3,6 @@
         <file>wilkizajac.jpg</file>
         <file>room.jpg</file>
         <file>treasureIsland.jpg</file>
+        <file>wilk.png</file>
     </qresource>
 </RCC>
